--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/jsdom": "^2.0.30",
     "@types/node": "^7.0.12",
     "async-file": "^2.0.2",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "jsdom": "^9.12.0"
   },
   "devDependencies": {
     "typescript": "^2.2.2"
