--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p \"./src\" -w",
-    "test": "node ./tests/tests.js"
+    "test": "ava ./tests/test.js --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,8 @@
     "minimist": "^1.2.0"
   },
   "devDependencies": {
+    "ava": "^0.19.0",
+    "del": "^2.2.2",
     "typescript": "^2.2.2"
   }
 }
