Bin for global module

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "tsc -p \"./src\" -w",
     "test": "ava ./tests/test.js --verbose"
   },
+  "bin": {
+    "test-module-exec": "dist/index.js"
+  },
   "author": "idchlife",
   "license": "MIT",
   "dependencies": {
